# fish-forecast

./: README.md  area_1148_1150_from_20230527_to_20200501_with_details.csv  catches_area_1148_from_20230527_to_20200501.csv  catches_area_1148_from_20230527_to_20200501.csv_with_details.csv  catches_area_1148_from_20230529_to_20200501.csv  catches_area_1150_from_20230527_to_20200501.csv  catches_area_1150_from_20230527_to_20200501.csv_with_details.csv  catches_area_1150_from_20230529_to_20200501.csv  get_catch_details.py  get_catch_urls.py  main.py  pyproject.toml  scraping.py
