[tool.poetry]
name = "fish-forecast"
version = "0.1.0"
description = ""
authors = ["canonrock16 <canonrock0401@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
fire = "^0.5.0"
tqdm = "^4.65.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
ipykernel = "^6.23.1"
selenium = "^4.9.1"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
